Update ReservationAdminService